<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6089cc"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/sendertxt"
        android:layout_width="206dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:background="#ffc7ec"
        android:text="@string/sendertxt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/receivertxt"
        android:layout_width="204dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:background="#ffc7ec"
        android:text="@string/receivertxt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/receiver"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/typetxt"
        android:layout_width="201dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:background="#ffc7ec"
        android:text="@string/typetxt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/type"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dest1txt"
        android:layout_width="206dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="#ffc7ec"
        android:text="@string/dest1txt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/dest1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dest2txt"
        android:layout_width="205dp"
        android:layout_height="32dp"
        android:layout_marginBottom="28dp"
        android:background="#ffc7ec"
        android:text="@string/dest2txt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/dest2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/dest1txt"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/dest1"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/dest2txt"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/dest2"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/buttontxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/dest2" />

    <EditText
        android:id="@+id/sender"
        android:layout_width="211dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/senderfieldtxt"
        app:layout_constraintBottom_toTopOf="@+id/receivertxt"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/receiver"
        android:layout_width="213dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/receiverfieldtxt"
        app:layout_constraintBottom_toTopOf="@+id/typetxt"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>